# sleeplab

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  NOTICE.md  README.md  VERSION  compose.advanced.yaml  docker-compose.yml  nx.json  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  schema.sql  server.py
.claude/: settings.local.json
.github/workflows/: automerge-dependabot.yml  (+5 more)
api/: __init__.py  auth.py  database.py  env.py  llm_client.py  main.py  mcp_server_http.py  models.py  project.json  railway.toml  requirements-mcp.txt  requirements.txt  settings_store.py  therapy_score.py
docker/: entrypoint.sh  nginx.conf  runtime-config.template.js  wait_for_db.py
docs/: compliance-thresholds.md
frontend/: index.html  package-lock.json  package.json  project.json  vite.config.ts
importer/: cpap_parser_import.py  db.py  edf_parser.py  import_sessions.py  open_cpap_import.py  sleephq_import.py  test_sleephq_fetch.py
migrations/: 001_add_auth.sql  002_scope_sessions_per_user.sql  003_add_public_ids.sql  004_reset_uuid_ids.sql  005_add_user_profile_fields.sql  006_add_import_settings.sql  007_add_wearable_samples.sql  013_add_manufacturer_and_source.sql  018_add_manufacturer_and_source.sql  023_add_adherence_enabled.sql
tests/: conftest.py  test_auth.py  test_config.py  test_cpap_db.py  test_cpap_parser_import.py  test_equipment.py  test_import.py  test_importer_timezone.py  test_local_import.py  test_open_cpap_import.py  test_sessions.py  test_therapy_score.py  test_wearable.py
(+58 files in other folders)
